--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import './variables.css';
+
 body {
   font-family: sans-serif;
   line-height: 1.5;
@@ -32,22 +34,8 @@ body {
   height: 100%;
 }
 
-button:hover {
-  cursor: pointer;
-}
-
-.centered-text-block {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  text-align: center;
-}
-
-.link {
-  color: inherit;
-  transition: color 0.3s ease;
-}
-
-.link:hover {
-  color: #d6056a;
+.campers-scope {
+  color: var(--primary-dark);
+  font-size: var(--font-size-base);
+  line-height: var(--line-height-base);
 }
