--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -57,7 +57,7 @@
     background-color: currentColor;
     border-radius: 50%;
     transform-origin: 50% 2em;
-    top: calc(50% - 2em);
+    top: calc(50% - 2em + 2px);
     left: 0;
     right: 0;
     margin: auto;
