--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -2,11 +2,12 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: #f9f9f9;
-  border-bottom: 1px solid #d6d6d6;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
+  height: 72px;
+  background-color: var(--lightest-gray);
+  box-shadow: var(--box-shadow);
 
-.main-container {
-  padding: 16px;
+  .logo {
+    display: flex;
+    align-items: center;
+  }
 }
