--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,7 +8,7 @@
   background: var(--primary-red);
   border: 1px solid var(--primary-red);
   border-radius: 200px;
-  padding: 16px;
+  padding: 16px 48px;
   transition: background-color var(--transition-duration) var(--transition-timing-function),
     border-color var(--transition-duration) var(--transition-timing-function);
   touch-action: manipulation;
@@ -30,7 +30,6 @@
     background: var(--white-color);
     border: 1px solid var(--light-gray);
     transition: border-color var(--transition-duration) var(--transition-timing-function);
-    padding: 16px;
 
     &:hover,
     &:focus {
@@ -41,10 +40,6 @@
   .button-text {
     opacity: 1;
     transition: opacity var(--transition-duration) var(--transition-timing-function);
-
-    &.is-hidden {
-      opacity: 0;
-    }
   }
 
   &::before {
@@ -72,7 +67,7 @@
   &.is-disabled {
     pointer-events: none;
     user-select: none;
-    opacity: var(--opacity);
+    filter: brightness(0.7) contrast(1.1);
   }
 
   &.is-loading {
@@ -80,6 +75,10 @@
 
     &::before {
       opacity: 1;
+    }
+
+    .button-text {
+      opacity: 0;
     }
   }
 
