--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -14,4 +14,5 @@
   --transition-duration: 250ms;
   --transition-timing-function: ease-in-out;
   --opacity: 0.2;
+  --box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
