--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,8 @@
 .hero {
   position: relative;
   height: calc(100vh - 72px);
-  background-image: url(../../assets/hero.jpg);
+  background-image: url(../../assets/hero.jpg),
+    linear-gradient(rgba(101, 67, 33, 0.8), rgba(101, 67, 33, 0.8));
   background-size: cover;
   background-position: center;
   display: flex;
@@ -22,6 +23,7 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../../assets/hero@2x.jpg);
+    background-image: url(../../assets/hero@2x.jpg),
+      linear-gradient(rgba(101, 67, 33, 0.8), rgba(101, 67, 33, 0.8));
   }
 }
