--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -89,9 +89,9 @@
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg); /* Начальное положение */
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg); /* Конечное положение */
+    transform: rotate(360deg);
   }
 }
