--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,7 +41,8 @@ body {
 
   .container {
     margin: 0 auto;
-    padding: 0 16px;
+    padding-right: 16px;
+    padding-left: 16px;
     width: 100%;
     min-width: 320px;
     max-width: 1440px;
