--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -12,6 +12,7 @@
   --line-height-base: 1.5;
   --font-size-base: 16px;
   --transition-duration: 250ms;
+  --transition-duration-fast: 100ms;
   --transition-timing-function: ease-in-out;
   --opacity: 0.2;
   --box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
