--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -7,6 +7,18 @@
 
   .catalog-page-campers-list-holder {
     flex-grow: 1;
-    max-width: 100%;
+    width: 100%;
+    max-width: calc(100% - 400px);
+  }
+}
+
+@media (max-width: 768px) {
+  .catalog-page-container {
+    flex-direction: column;
+    width: 100%;
+
+    .catalog-page-campers-list-holder {
+      max-width: 100%;
+    }
   }
 }
