--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -12,6 +12,7 @@
     object-fit: cover;
     border-radius: 10px;
     background-color: var(--light-gray);
+    box-shadow: var(--box-shadow);
   }
 
   .camper-card-info {
