--- a/src/components/BookForm/BookForm.module.css
+++ b/src/components/BookForm/BookForm.module.css
@@ -22,4 +22,10 @@
     justify-content: center;
     margin-top: 24px;
   }
+
+  .book-form-field-error {
+    margin-top: 14px;
+    font-size: 12px;
+    color: var(--primary-red);
+  }
 }
