--- a/src/components/Features/Features.module.css
+++ b/src/components/Features/Features.module.css
@@ -10,6 +10,7 @@
     height: 48px;
     padding: 16px 18px;
     background-color: var(--lighter-gray);
+    mix-blend-mode: multiply;
     border-radius: 999px;
     font-weight: 500;
   }
